--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.5.1"
+actix-web = "*"
 serde = "*"
 actix-rt = "*"
 serde_derive = "*"
 serde_json = "*"
 shells = "*"
-reqwest = { version = "0.11.22", features = ["native-tls", "serde_json", "json", "blocking"] }
+reqwest = { version = "*", features = ["native-tls", "json", "blocking"] }
 tokio = { version = "*", features = ["full"] }
